--- a/Part1/survey_data.Rmd
+++ b/Part1/survey_data.Rmd
@@ -32,6 +32,8 @@ library(dplyr)
 library(ggplot2)
 library(tidyr)
 library(usmap)
+library(knitr)
+library(kableExtra)
 # Read in the raw data (You might need to change this if you use a different dataset)
 raw_data <- read_dta("ns20200625/ns20200625.dta")
 # Add the labels
@@ -39,17 +41,12 @@ raw_data <- labelled::to_factor(raw_data)
 # Just keep some variables
 reduced_data <- 
   raw_data %>% 
-  select(interest,
-         registration,
+  select(registration,
          vote_2016,
          vote_intention,
-         vote_2020,
          trump_biden,
          ideo5,
-         employment,
-         foreign_born,
          gender,
-         census_region,
          hispanic,
          race_ethnicity,
          household_income,
@@ -59,13 +56,12 @@ reduced_data <-
 
 
 #### Clean Up ####
-# make age group "18-29", "30-39", "40-49", "50-59", "60+"
+# make age group "18-29", "30-44", "45-59", "60+"
 cleaned_data <- reduced_data %>%
   mutate(age_group = case_when(
     age >= 60 ~ 60,
-    age >= 50 & age <= 59 ~ 50,
-    age >= 40 & age <= 49 ~ 40,
-    age >= 30 & age <= 39 ~ 30,
+    age >= 45 & age <= 59 ~ 50,
+    age >= 30 & age <= 44 ~ 40,
     age >= 18 & age <= 29 ~ 18,
   )
            )
@@ -89,13 +85,6 @@ cleaned_data<- cleaned_data%>%
                 .== "Dont Know" ~ "NA",
                 .== "NA's" ~ "NA"
               )))
-
-# create 2 variables "vote_trump" and "vote_biden"
-cleaned_data<- cleaned_data%>%
-  mutate(vote_trump = ifelse(trump_biden=="Trump",1,0))
-
-cleaned_data<- cleaned_data%>%
-  mutate(vote_biden = ifelse(trump_biden=="Biden",1,0))
 
 # name matcher unifies the state name in 2 datasets. 
 names_matcher <- tibble(state_name = state.name, state = state.abb)
@@ -160,16 +149,53 @@ cleaned_data<-cleaned_data%>%
                 .=="Completed some college, but no degree"~"some college",
                 .=="Associate Degree"~"Associate Degree",
                 .=="College Degree (such as B.A., B.S.)"~"College Degree(such as B.A., B.S.)",
-                .=="Completed some graduate, but no degree"~"some graduate",
-                .=="Masters degree"~"Masters degree",
-                .=="Doctorate degree"~"Doctorate degree",
+                .=="Completed some graduate, but no degree"~"Completed some graduate",
+                .=="Masters degree"~"Masters Degree",
+                .=="Doctorate degree"~"Doctorate Degree",
               )))
 
-#clean employment
-
+#clean income
+cleaned_data<- cleaned_data%>%
+  mutate_at(vars(household_income), .funs = 
+              funs(case_when(
+                .=="Less than $14,999"~"Less than $19,999",
+                .=="$15,000 to $19,999"~"Less than $19,999",
+                .=="$20,000 to $24,999"~"$20,000 to $29,999",
+                .=="$25,000 to $29,999"~"$20,000 to $29,999",
+                .=="$30,000 to $34,999"~"$30,000 to $39,999",
+                .=="$35,000 to $39,999"~"$30,000 to $39,999",
+                .=="$40,000 to $44,999"~"$40,000 to $49,999",
+                .=="$45,000 to $49,999"~"$40,000 to $49,999",
+                .=="$50,000 to $54,999"~"$50,000 to $59,999",
+                .=="$55,000 to $59,999"~"$50,000 to $59,999",
+                .=="$60,000 to $64,999"~"$60,000 to $69,999",
+                .=="$65,000 to $69,999"~"$60,000 to $69,999",
+                .=="$70,000 to $74,999"~"$70,000 to $79,999",
+                .=="$75,000 to $79,999"~"$70,000 to $79,999",
+                .=="$80,000 to $84,999"~"$80,000 to $89,999",
+                .=="$85,000 to $89,999"~"$80,000 to $89,999",
+                .=="$90,000 to $94,999"~"$90,000 to $99,999",
+                .=="$95,000 to $99,999"~"$90,000 to $99,999",
+                .=="$100,000 to $124,999"~"$100,000 to $124.999",
+                .=="$125,000 to $149,999"~"$125,000 to $149,999",
+                .=="$150,000 to $174,999"~"$150,000 to $174,999",
+                .=="$175,000 to $199,999"~"$175,000 to $199,999",
+                .=="$200,000 to $249,999"~"$200,000 to $249,999",
+                .=="$250,000 and above"~"$250,000 and above",
+                .=="NA's"~"NA",
+              )))
 ```
 
-```{r Vote Intention, fig.cap="Vote intention 2020", fig.dim=c(5,3), echo=FALSE}
+```{r data preview, echo=FALSE}
+kable(head(cleaned_data[1:7]), format="latex", booktabs=TRUE) %>% 
+  kable_styling(latex_options="scale_down")
+kable(head(cleaned_data[8:15]), format="latex", booktabs=TRUE) %>% 
+  kable_styling(latex_options="scale_down")
+```
+
+
+
+```{r Vote, fig.cap="Vote intention 2020", fig.dim=c(5,3), echo=FALSE}
 #Plot Biden Trump expected votes
 cleaned_data%>%
   ggplot(aes(y=trump_biden, fill = trump_biden))+
@@ -181,7 +207,7 @@ cleaned_data%>%
   theme_minimal()
 ```
 
-```{r election forcast, fig.cap="Election forcast by States", fig.dim=c(5,3), echo = FALSE}
+```{r State, fig.cap="Election forcast by States", fig.dim=c(5,3), echo = FALSE}
 #create data frame containing the frequency of biden/trump's votes of each state
 state_vote<-as.data.frame(table(cleaned_data$trump_biden, cleaned_data$state_name))
 #create new data frame
@@ -205,7 +231,7 @@ for (i in seq(1,dim(state_vote)[1],2)){
 #change data frame variable names
 names(election_forcast)[1]<-"vote"
 names(election_forcast)[2]<-"state"
-#use usmap to graph the new data, visualise the person with majority vote each state. 
+#use usmap to graph the new data, visualize the person with majority vote each state. 
 plot_usmap(data=election_forcast, values = "vote")+
   scale_fill_manual(values = c("steelblue3", "lightcoral"))+
   labs(title = "Election Forcast by States", fill = "Vote")
@@ -276,12 +302,21 @@ ggplot(cleaned_data, aes(x=as.factor(age_group), fill=trump_biden))+
   theme_minimal()+
   ylab("Vote Count")+
   xlab("Age Group")+
-  scale_x_discrete(labels = c("18~29","30~39", "40~49","50~59","60+"))+
+  scale_x_discrete(labels = c("18~29","30~44", "45~59","60+"))+
   scale_fill_manual(values = c("steelblue3", "lightcoral"), guide = FALSE)
 ```
 
 ```{r education, fig.cap="Vote intention by education", fig.dim=c(5,3), echo=FALSE}
-ggplot(cleaned_data, aes(x=education, fill=trump_biden))+
+ggplot(cleaned_data, aes(x=factor(education, 
+                                  levels = c("less than highschool", 
+                                             "highschool diploma",
+                                             "some college",
+                                             "Associate Degree",
+                                             "College Degree(such as B.A., B.S.)",
+                                             "Completed some graduate",
+                                             "Masters Degree", 
+                                             "Doctorate Degree")), 
+                         fill=trump_biden))+
   geom_bar(alpha = 0.8)+
   facet_wrap(~trump_biden, ncol=1)+
   coord_flip()+
@@ -291,8 +326,27 @@ ggplot(cleaned_data, aes(x=education, fill=trump_biden))+
   scale_fill_manual(values = c("steelblue3", "lightcoral"), guide = FALSE)
 ```
 
-```{r household income, fig.cap="Vote intention by household income", fig.dim=c(5,3), echo=FALSE}
-ggplot(cleaned_data, aes(x=household_income, fill=trump_biden))+
+```{r income, fig.cap="Vote intention by household income", fig.dim=c(5,3), echo=FALSE}
+# Graph household income tears for trump/biden votes. 
+# remove na, and levels ensures the order presented on graph
+ggplot(data = subset(cleaned_data, !is.na(household_income)), aes(x=factor(household_income, 
+                                  levels = c("Less than $19,999",
+                                             "$20,000 to $29,999",
+                                             "$30,000 to $39,999",
+                                             "$40,000 to $49,999",
+                                             "$50,000 to $59,999",
+                                             "$60,000 to $69,999",
+                                             "$70,000 to $79,999",
+                                             "$80,000 to $89,999",
+                                             "$90,000 to $99,999",
+                                             "$100,000 to $124.999",
+                                             "$125,000 to $149,999",
+                                             "$150,000 to $174,999",
+                                             "$175,000 to $199,999",
+                                             "$200,000 to $249,999",
+                                             "$250,000 and above",
+                                             "NA")), 
+                         fill=trump_biden))+
   geom_bar(alpha = 1)+
   facet_wrap(~trump_biden, ncol=1)+
   coord_flip()+
@@ -301,16 +355,3 @@ ggplot(cleaned_data, aes(x=household_income, fill=trump_biden))+
   xlab("household income")+
   scale_fill_manual(values = c("steelblue3", "lightcoral"), guide = FALSE)
 ```
-
-```{r employment, fig.cap="Vote intention bt employment", fig.dim=c(5,3), echo=FALSE}
-ggplot(data = subset(cleaned_data, !is.na(employment)), aes(x=employment, fill=trump_biden))+
-  geom_bar(alpha = 0.8)+
-  facet_wrap(~trump_biden, ncol=1)+
-  coord_flip()+
-  theme_minimal()+
-  ylab("Vote Count")+
-  xlab("employment")+
-  scale_fill_manual(values = c("steelblue3", "lightcoral"), guide = FALSE)
-```
-
-
