--- a/Part1/survey_data.Rmd
+++ b/Part1/survey_data.Rmd
@@ -50,6 +50,7 @@ reduced_data <-
          race_ethnicity,
          household_income,
          state,
+         census_region,
          age)
 
 
@@ -134,30 +135,30 @@ cleaned_data<-cleaned_data%>%
 cleaned_data<- cleaned_data%>%
   mutate_at(vars(household_income), .funs = 
               funs(case_when(
-                .=="Less than $14,999"~"Less than $19,999",
-                .=="$15,000 to $19,999"~"Less than $19,999",
-                .=="$20,000 to $24,999"~"$20,000 to $29,999",
-                .=="$25,000 to $29,999"~"$20,000 to $29,999",
-                .=="$30,000 to $34,999"~"$30,000 to $39,999",
-                .=="$35,000 to $39,999"~"$30,000 to $39,999",
-                .=="$40,000 to $44,999"~"$40,000 to $49,999",
-                .=="$45,000 to $49,999"~"$40,000 to $49,999",
-                .=="$50,000 to $54,999"~"$50,000 to $59,999",
-                .=="$55,000 to $59,999"~"$50,000 to $59,999",
-                .=="$60,000 to $64,999"~"$60,000 to $69,999",
-                .=="$65,000 to $69,999"~"$60,000 to $69,999",
-                .=="$70,000 to $74,999"~"$70,000 to $79,999",
-                .=="$75,000 to $79,999"~"$70,000 to $79,999",
-                .=="$80,000 to $84,999"~"$80,000 to $89,999",
-                .=="$85,000 to $89,999"~"$80,000 to $89,999",
-                .=="$90,000 to $94,999"~"$90,000 to $99,999",
-                .=="$95,000 to $99,999"~"$90,000 to $99,999",
-                .=="$100,000 to $124,999"~"$100,000 to $124.999",
+                .=="Less than $14,999"~"Less than $24,999",
+                .=="$15,000 to $19,999"~"Less than $24,999",
+                .=="$20,000 to $24,999"~"Less than $24,999",
+                .=="$25,000 to $29,999"~"$25,000 to $49,999",
+                .=="$30,000 to $34,999"~"$25,000 to $49,999",
+                .=="$35,000 to $39,999"~"$25,000 to $49,999",
+                .=="$40,000 to $44,999"~"$25,000 to $49,999",
+                .=="$45,000 to $49,999"~"$25,000 to $49,999",
+                .=="$50,000 to $54,999"~"$50,000 to $74,999",
+                .=="$55,000 to $59,999"~"$50,000 to $74,999",
+                .=="$60,000 to $64,999"~"$50,000 to $74,999",
+                .=="$65,000 to $69,999"~"$50,000 to $74,999",
+                .=="$70,000 to $74,999"~"$50,000 to $74,999",
+                .=="$75,000 to $79,999"~"$75,000 to $99,999",
+                .=="$80,000 to $84,999"~"$75,000 to $99,999",
+                .=="$85,000 to $89,999"~"$75,000 to $99,999",
+                .=="$90,000 to $94,999"~"$75,000 to $99,999",
+                .=="$95,000 to $99,999"~"$75,000 to $99,999",
+                .=="$100,000 to $124,999"~"$100,000 to $124,999",
                 .=="$125,000 to $149,999"~"$125,000 to $149,999",
                 .=="$150,000 to $174,999"~"$150,000 to $174,999",
                 .=="$175,000 to $199,999"~"$175,000 to $199,999",
-                .=="$200,000 to $249,999"~"$200,000 to $249,999",
-                .=="$250,000 and above"~"$250,000 and above",
+                .=="$200,000 to $249,999"~"$More than 200,000",
+                .=="$250,000 and above"~"$More than 200,000",
                 .=="NA's"~"NA",
               )))
 
@@ -279,22 +280,16 @@ ggplot(cleaned_data, aes(x=as.factor(age_group), fill=trump_biden))+
 # Graph household income tears for trump/biden votes. 
 # remove na, and levels ensures the order presented on graph
 ggplot(data = subset(cleaned_data, !is.na(household_income)), aes(x=factor(household_income, 
-                                  levels = c("Less than $19,999",
-                                             "$20,000 to $29,999",
-                                             "$30,000 to $39,999",
-                                             "$40,000 to $49,999",
-                                             "$50,000 to $59,999",
-                                             "$60,000 to $69,999",
-                                             "$70,000 to $79,999",
-                                             "$80,000 to $89,999",
-                                             "$90,000 to $99,999",
-                                             "$100,000 to $124.999",
+                                  levels = c("Less than $24,999",
+                                             "$25,000 t0 $49,999",
+                                             "$50,000 to $74,999",
+                                             "$75,000 to $99,999",
+                                             "$100,000 to $124,999",
                                              "$125,000 to $149,999",
                                              "$150,000 to $174,999",
                                              "$175,000 to $199,999",
-                                             "$200,000 to $249,999",
-                                             "$250,000 and above",
-                                             "NA")), 
+                                             "$200,000 and above"),
+                                  exclude = "NA"), 
                          fill=trump_biden))+
   geom_bar(alpha = 1)+
   facet_wrap(~trump_biden, ncol=1)+
