--- a/Part1/survey_data.Rmd
+++ b/Part1/survey_data.Rmd
@@ -157,8 +157,8 @@ cleaned_data<- cleaned_data%>%
                 .=="$125,000 to $149,999"~"$125,000 to $149,999",
                 .=="$150,000 to $174,999"~"$150,000 to $174,999",
                 .=="$175,000 to $199,999"~"$175,000 to $199,999",
-                .=="$200,000 to $249,999"~"$More than 200,000",
-                .=="$250,000 and above"~"$More than 200,000",
+                .=="$200,000 to $249,999"~"More than $200,000",
+                .=="$250,000 and above"~"More than $200,000",
                 .=="NA's"~"NA",
               )))
 
